@@ -78,14 +78,9 @@ class SearchApiDate extends Date {
       ];
     }
 
-    // Store this because it will get overwritten by the grandparent, and the
-    // parent doesn't always restore it correctly.
-    $type = $this->value['type'];
     $return = parent::acceptExposedInput($input);
 
     if (!$return) {
-      // If the parent returns FALSE, it doesn't restore the "type" key.
-      $this->value['type'] = $type;
       // Override for the "(not) empty" operators.
       $operators = $this->operators();
       if ($operators[$this->operator]['values'] == 0) {
